@@ -13,6 +13,8 @@ bin_PROGRAMS = gnomesword
 COMMON_SOURCE =  \
     e-splash.c \
     e-splash.h \
+    gs_dock_dlg.c \
+    gs_dock_dlg.h \
     gs_gui.c \
     gs_gui.h \
     gs_setup.c \
